read first 5 rows

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -238,6 +238,97 @@
     "df = pd.read_csv(r\"E:\\Machine Learning\\Module 10\\Scaling_Project\\income.csv\")\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2714f62c-82a5-474d-a68a-459826578d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Buy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rob</td>\n",
+       "      <td>27</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michael</td>\n",
+       "      <td>29</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mohan</td>\n",
+       "      <td>29</td>\n",
+       "      <td>61000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ismail</td>\n",
+       "      <td>28</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kory</td>\n",
+       "      <td>42</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age  Income  Buy\n",
+       "0      Rob   27   70000  Yes\n",
+       "1  Michael   29   90000   No\n",
+       "2    Mohan   29   61000  Yes\n",
+       "3   Ismail   28   60000  Yes\n",
+       "4     Kory   42  150000   No"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
