--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -13,230 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "4d36acdc-cb5f-45b8-a434-7e1a8c581962",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Buy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Rob</td>\n",
-       "      <td>27</td>\n",
-       "      <td>70000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>29</td>\n",
-       "      <td>90000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mohan</td>\n",
-       "      <td>29</td>\n",
-       "      <td>61000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ismail</td>\n",
-       "      <td>28</td>\n",
-       "      <td>60000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Kory</td>\n",
-       "      <td>42</td>\n",
-       "      <td>150000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Gautam</td>\n",
-       "      <td>39</td>\n",
-       "      <td>155000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>David</td>\n",
-       "      <td>41</td>\n",
-       "      <td>160000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Andrea</td>\n",
-       "      <td>38</td>\n",
-       "      <td>162000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Brad</td>\n",
-       "      <td>36</td>\n",
-       "      <td>156000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Angelina</td>\n",
-       "      <td>35</td>\n",
-       "      <td>130000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Donald</td>\n",
-       "      <td>37</td>\n",
-       "      <td>137000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Tom</td>\n",
-       "      <td>26</td>\n",
-       "      <td>45000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Arnold</td>\n",
-       "      <td>27</td>\n",
-       "      <td>48000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Jared</td>\n",
-       "      <td>28</td>\n",
-       "      <td>51000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Stark</td>\n",
-       "      <td>29</td>\n",
-       "      <td>49500</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Ranbir</td>\n",
-       "      <td>32</td>\n",
-       "      <td>53000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Dipika</td>\n",
-       "      <td>40</td>\n",
-       "      <td>65000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Priyanka</td>\n",
-       "      <td>41</td>\n",
-       "      <td>63000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Nick</td>\n",
-       "      <td>43</td>\n",
-       "      <td>64000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Alia</td>\n",
-       "      <td>39</td>\n",
-       "      <td>80000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Sid</td>\n",
-       "      <td>41</td>\n",
-       "      <td>82000</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Abdul</td>\n",
-       "      <td>39</td>\n",
-       "      <td>58000</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Name  Age  Income  Buy\n",
-       "0        Rob   27   70000  Yes\n",
-       "1    Michael   29   90000   No\n",
-       "2      Mohan   29   61000  Yes\n",
-       "3     Ismail   28   60000  Yes\n",
-       "4       Kory   42  150000   No\n",
-       "5     Gautam   39  155000  Yes\n",
-       "6      David   41  160000  Yes\n",
-       "7     Andrea   38  162000   No\n",
-       "8       Brad   36  156000  Yes\n",
-       "9   Angelina   35  130000   No\n",
-       "10    Donald   37  137000   No\n",
-       "11       Tom   26   45000   No\n",
-       "12    Arnold   27   48000  Yes\n",
-       "13     Jared   28   51000   No\n",
-       "14     Stark   29   49500   No\n",
-       "15    Ranbir   32   53000   No\n",
-       "16    Dipika   40   65000  Yes\n",
-       "17  Priyanka   41   63000   No\n",
-       "18      Nick   43   64000  Yes\n",
-       "19      Alia   39   80000   No\n",
-       "20       Sid   41   82000  Yes\n",
-       "21     Abdul   39   58000   No"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"E:\\Machine Learning\\Module 10\\Scaling_Project\\income.csv\")\n",
-    "df"
+    "df = pd.read_csv(r\"E:\\Machine Learning\\Module 10\\Scaling_Project\\income.csv\")"
    ]
   },
   {
@@ -328,6 +110,97 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2446e189-897e-494c-a304-52adcddfe91c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Buy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Priyanka</td>\n",
+       "      <td>41</td>\n",
+       "      <td>63000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Nick</td>\n",
+       "      <td>43</td>\n",
+       "      <td>64000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Alia</td>\n",
+       "      <td>39</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Sid</td>\n",
+       "      <td>41</td>\n",
+       "      <td>82000</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Abdul</td>\n",
+       "      <td>39</td>\n",
+       "      <td>58000</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Name  Age  Income  Buy\n",
+       "17  Priyanka   41   63000   No\n",
+       "18      Nick   43   64000  Yes\n",
+       "19      Alia   39   80000   No\n",
+       "20       Sid   41   82000  Yes\n",
+       "21     Abdul   39   58000   No"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   }
  ],
