apply standard scaler

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -566,6 +566,50 @@
     "X = df[['Age','Income']]\n",
     "X"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cf7ad72e-99d4-4f2d-b24a-60ebcae277e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.35605536, -0.48068427],\n",
+       "       [-1.00915747, -0.01015907],\n",
+       "       [-1.00915747, -0.69242061],\n",
+       "       [-1.18260641, -0.71594687],\n",
+       "       [ 1.24567876,  1.40141653],\n",
+       "       [ 0.72533193,  1.51904783],\n",
+       "       [ 1.07222982,  1.63667914],\n",
+       "       [ 0.55188299,  1.68373166],\n",
+       "       [ 0.20498511,  1.54257409],\n",
+       "       [ 0.03153617,  0.93089133],\n",
+       "       [ 0.37843405,  1.09557515],\n",
+       "       [-1.5295043 , -1.06884077],\n",
+       "       [-1.35605536, -0.99826199],\n",
+       "       [-1.18260641, -0.92768321],\n",
+       "       [-1.00915747, -0.9629726 ],\n",
+       "       [-0.48881065, -0.88063069],\n",
+       "       [ 0.89878087, -0.59831557],\n",
+       "       [ 1.07222982, -0.64536809],\n",
+       "       [ 1.4191277 , -0.62184183],\n",
+       "       [ 0.72533193, -0.24542167],\n",
+       "       [ 1.07222982, -0.19836915],\n",
+       "       [ 0.72533193, -0.76299939]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "standard = scaler.fit_transform(X)\n",
+    "standard"
+   ]
   }
  ],
  "metadata": {
