apply minmax scaler

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -381,6 +381,7 @@
     }
    ],
    "source": [
+    "# Select numerical data types\n",
     "X = df.select_dtypes(include='number')\n",
     "X"
    ]
@@ -563,6 +564,7 @@
     }
    ],
    "source": [
+    "# Extract numerical columns\n",
     "X = df[['Age','Income']]\n",
     "X"
    ]
@@ -606,9 +608,55 @@
     }
    ],
    "source": [
+    "# Apply Standard Scaler\n",
     "scaler = StandardScaler()\n",
     "standard = scaler.fit_transform(X)\n",
     "standard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8b7b0a13-758d-441f-a70d-0d1f63add9b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.05882353, 0.21367521],\n",
+       "       [0.17647059, 0.38461538],\n",
+       "       [0.17647059, 0.13675214],\n",
+       "       [0.11764706, 0.12820513],\n",
+       "       [0.94117647, 0.8974359 ],\n",
+       "       [0.76470588, 0.94017094],\n",
+       "       [0.88235294, 0.98290598],\n",
+       "       [0.70588235, 1.        ],\n",
+       "       [0.58823529, 0.94871795],\n",
+       "       [0.52941176, 0.72649573],\n",
+       "       [0.64705882, 0.78632479],\n",
+       "       [0.        , 0.        ],\n",
+       "       [0.05882353, 0.02564103],\n",
+       "       [0.11764706, 0.05128205],\n",
+       "       [0.17647059, 0.03846154],\n",
+       "       [0.35294118, 0.06837607],\n",
+       "       [0.82352941, 0.17094017],\n",
+       "       [0.88235294, 0.15384615],\n",
+       "       [1.        , 0.16239316],\n",
+       "       [0.76470588, 0.2991453 ],\n",
+       "       [0.88235294, 0.31623932],\n",
+       "       [0.76470588, 0.11111111]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply MinMax scaler\n",
+    "scaler = MinMaxScaler()\n",
+    "minmax = scaler.fit_transform(X)\n",
+    "minmax"
    ]
   }
  ],
