apply maxabs scaler

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -658,6 +658,51 @@
     "minmax = scaler.fit_transform(X)\n",
     "minmax"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a90cb997-f736-462a-8916-09b6ef0a02fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.62790698, 0.43209877],\n",
+       "       [0.6744186 , 0.55555556],\n",
+       "       [0.6744186 , 0.37654321],\n",
+       "       [0.65116279, 0.37037037],\n",
+       "       [0.97674419, 0.92592593],\n",
+       "       [0.90697674, 0.95679012],\n",
+       "       [0.95348837, 0.98765432],\n",
+       "       [0.88372093, 1.        ],\n",
+       "       [0.8372093 , 0.96296296],\n",
+       "       [0.81395349, 0.80246914],\n",
+       "       [0.86046512, 0.84567901],\n",
+       "       [0.60465116, 0.27777778],\n",
+       "       [0.62790698, 0.2962963 ],\n",
+       "       [0.65116279, 0.31481481],\n",
+       "       [0.6744186 , 0.30555556],\n",
+       "       [0.74418605, 0.32716049],\n",
+       "       [0.93023256, 0.40123457],\n",
+       "       [0.95348837, 0.38888889],\n",
+       "       [1.        , 0.39506173],\n",
+       "       [0.90697674, 0.49382716],\n",
+       "       [0.95348837, 0.50617284],\n",
+       "       [0.90697674, 0.35802469]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply MaxAbsScaler\n",
+    "scaler = MaxAbsScaler()\n",
+    "maxabs = scaler.fit_transform(X)\n",
+    "maxabs"
+   ]
   }
  ],
  "metadata": {
