apply robust scaler

--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -703,6 +703,51 @@
     "maxabs = scaler.fit_transform(X)\n",
     "maxabs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9331d268-bfc7-49d2-8322-0ab1a8209e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.88372093,  0.03257329],\n",
+       "       [-0.69767442,  0.29315961],\n",
+       "       [-0.69767442, -0.08469055],\n",
+       "       [-0.79069767, -0.09771987],\n",
+       "       [ 0.51162791,  1.07491857],\n",
+       "       [ 0.23255814,  1.14006515],\n",
+       "       [ 0.41860465,  1.20521173],\n",
+       "       [ 0.13953488,  1.23127036],\n",
+       "       [-0.04651163,  1.15309446],\n",
+       "       [-0.13953488,  0.81433225],\n",
+       "       [ 0.04651163,  0.90553746],\n",
+       "       [-0.97674419, -0.29315961],\n",
+       "       [-0.88372093, -0.25407166],\n",
+       "       [-0.79069767, -0.21498371],\n",
+       "       [-0.69767442, -0.23452769],\n",
+       "       [-0.41860465, -0.18892508],\n",
+       "       [ 0.3255814 , -0.03257329],\n",
+       "       [ 0.41860465, -0.05863192],\n",
+       "       [ 0.60465116, -0.04560261],\n",
+       "       [ 0.23255814,  0.16286645],\n",
+       "       [ 0.41860465,  0.18892508],\n",
+       "       [ 0.23255814, -0.1237785 ]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply Robust Scaler\n",
+    "scaler = RobustScaler()\n",
+    "robust = scaler.fit_transform(X)\n",
+    "robust"
+   ]
   }
  ],
  "metadata": {
